@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.23144 2023/07/02 12:49:10 wiz Exp $
+$NetBSD: TODO,v 1.23145 2023/07/03 12:44:07 wiz Exp $
 
 Suggested new packages
 ======================
@@ -1428,7 +1428,7 @@ For possible Perl packages updates, see http://www.NetBSD.org/~wiz/perl.html
 	o trojita-0.6
 	o ttftot42-0.4.1
 	o turba-4.2.12
-	o typst-0.6.0
+	o typst-0.6.0 [wip, needs rust 1.70]
 	o tyrquake-0.66
 	o uae-0.8.29
 	o ubs-0.20
