@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.567 2023/06/18 14:23:06 mef Exp $
+# $NetBSD: Makefile,v 1.568 2023/07/03 12:44:07 wiz Exp $
 
 COMMENT=	Mathematics
 
@@ -40,7 +40,6 @@ SUBDIR+=	R-bitops
 SUBDIR+=	R-broom
 SUBDIR+=	R-car
 SUBDIR+=	R-carData
-SUBDIR+=	R-cellranger
 SUBDIR+=	R-chron
 SUBDIR+=	R-circular
 SUBDIR+=	R-classInt
