@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2023,v 1.4204 2023/07/03 10:55:33 adam Exp $
+$NetBSD: CHANGES-2023,v 1.4205 2023/07/03 12:44:07 wiz Exp $
 
 Changes to the packages collection and infrastructure in 2023:
 
@@ -5873,3 +5873,4 @@ Changes to the packages collection and infrastructure in 2023:
 	Updated shells/ksh93 to 1.0.6 [vins 2023-07-03]
 	Updated devel/libmd to 1.1.0 [vins 2023-07-03]
 	Updated misc/stellarium to 23.2 [adam 2023-07-03]
+	Removed math/R-cellranger successor textproc/R-cellranger [wiz 2023-07-03]
